--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Etherium test project",
   "main": "index.js",
   "scripts": {
+    "server": "static www",
+    "start": "",
     "test": "npm run truffle-test",
-    "truffle-compile": "truffle compile",
+    "truffle-compile": "truffle compile && copyfiles -f build/contracts/CoinBox.json www",
     "truffle-develop": "truffle develop",
     "truffle-init": "truffle init",
-    "truffle-test": "truffle test",
-    "testrpc": "testrpc"
+    "truffle-test": "truffle test --network test",
+    "test-network": "node ./lib/start-test-environment.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +25,12 @@
   },
   "homepage": "https://github.com/PavelDymkov/coin-box-etherium",
   "dependencies": {
+    "copyfiles": "^1.2.0",
     "ethereumjs-testrpc": "^6.0.3",
+    "ganache-core": "^2.0.2",
+    "node-static": "^0.7.10",
     "truffle": "^4.0.1",
+    "web3": "^1.0.0-beta.15",
     "zeppelin-solidity": "^1.4.0"
   }
 }
