--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "truffle compile && copyfiles -f build/contracts/CoinBox.json www",
+    "deploy-to-test-network": "truffle migrate --reset --network test",
     "server": "static www",
     "start": "npm run compile",
     "test": "truffle test --network test",
